--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Prueba de envio a gitHub</title>
 </head>
 <body>
     <article>Hola ya he configurado el WSL para que el /HOME del usuario benhumea</article><br>
