Se inserto un encabezado de tamaño4

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <article>Hola ya he configurado el WSL para que el /HOME del usuario benhumea</article><br>
     <article>tenga permisos para que VScode pueda guardar cambios sin problemas</article>
+    <h4>Esto es un encabezado de tamaño  4</h4>
 </body>
 </html>
